--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,54 @@
 name: CI
 on:
   push:
-    branches: [main]
+    branches:
+      - main
   pull_request:
-    branches: [main]
-  workflow_dispatch: null
+    branches:
+      - main
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-24.04
     steps:
-      - run: "true"
+      - uses: actions/checkout@v4
+      - uses: astral-sh/setup-uv@v6
+      - name: Run build
+        run: uv build
+  lint:
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+      - uses: astral-sh/setup-uv@v6
+      - name: Set up Python environment
+        run: uv sync --group lint
+      - name: Run linters
+        run: |
+          uv run ruff check --output-format=github || exit_status=1
+          uv run ruff format --check || exit_status=1
+          exit "${exit_status:-0}"
+  test:
+    runs-on: ubuntu-24.04
+    strategy:
+      matrix:
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.13t"]
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v4
+      - uses: astral-sh/setup-uv@v6
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Set up Python environment
+        run: uv sync --group test
+      - name: Run tests
+        run: uv run pytest
+  typecheck:
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+      - uses: astral-sh/setup-uv@v6
+      - name: Set up Python environment
+        run: |
+          uv sync --group test
+          echo "$PWD/.venv/bin" >> "$GITHUB_PATH"
+      - uses: jakebailey/pyright-action@v2
