--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,9 @@ lint = [
 test = [
     "aiohttp>=3.12.12",
     "anyio>=4.9.0",
+    "httpx>=0.28.1",
     "pytest>=8.4.0",
+    "trio>=0.30.0",
 ]
 
 [tool.coverage.run]
