--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Combine coverage files
         run: uv run coverage combine
       - name: Report coverage
-        run: uv run coverage report --format markdown >> "$GITHUB_STEP_SUMMARY"
+        run: uv run coverage report --format markdown | tee -a "$GITHUB_STEP_SUMMARY"
   lint:
     runs-on: ubuntu-24.04
     steps:
